--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="./styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;700&display=swap" rel="stylesheet">
     <title>Reviews</title>
 </head>
-<body>
+<body style="background-color:#f2f2f2;">
   <div id="reviewsComponent"></div>
   <script src="./dist/bundle.js"></script>
 </body>
