--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;700&display=swap" rel="stylesheet">
     <title>Reviews</title>
 </head>
-<body style="background-color:#f2f2f2;">
+<body>
   <div id="reviewsComponent"></div>
   <script src="./dist/bundle.js"></script>
 </body>
